# FontViewer

./: .clang-format  .gitignore  .gitmodules  NOTICE  README.md  oitvar.h
src/: CMakeLists.txt  FontViewer.pro  characterwidget.cpp  characterwidget.h  fontinfo.cpp  fontinfo.h  fontviewer.cpp  fontviewer.h  fontviewer.json  fontwidget.cpp  fontwidget.h  fontwidget.ui  glyphinspectorwidget.cpp  glyphinspectorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sdk.pri  test.cpp
